--- a/Randomness/Makefile
+++ b/Randomness/Makefile
@@ -4,10 +4,13 @@ DATE=-V date="`date +'%d.%m.%Y'`"
 
 .PHONY: all clean
 
-all: loesungen-1.pdf
+all: loesungen-1.pdf loesungen-2.pdf
 
 loesungen-1.pdf: loesungen-1.md
 	pandoc $(PDF_PARAMS) $(FONT_PARAMS) $(DATE) $^ -o $@
 
+loesungen-2.pdf: loesungen-2.md
+	pandoc -t ms $^ -o $@
+
 clean:
-	rm -rf loesungen-1.pdf
+	rm -rf loesungen-1.pdf loesungen-2.pdf
